Fix  failed to parse field [followers] of type [keyword] in document with i (#15670)