@@ -3,7 +3,6 @@ package org.openmetadata.service.search.indexes;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.openmetadata.schema.entity.classification.Classification;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.search.SearchIndexUtils;
@@ -24,10 +23,11 @@ public record ClassificationIndex(Classification classification) implements Sear
         "fqnParts",
         getFQNParts(
             classification.getFullyQualifiedName(),
-            suggest.stream().map(SearchSuggest::getInput).collect(Collectors.toList())));
+            suggest.stream().map(SearchSuggest::getInput).toList()));
     doc.put("suggest", suggest);
     doc.put("entityType", Entity.CLASSIFICATION);
     doc.put("owner", getEntityWithDisplayName(classification.getOwner()));
+    doc.put("followers", SearchIndexUtils.parseFollowers(classification.getFollowers()));
     return doc;
   }
 }
